--- a/pepsimesa.html
+++ b/pepsimesa.html
@@ -7,7 +7,7 @@
     <title>Teste</title>
 </head>
 <body>
-    <h1>Mesa do baiano</h1>
+    <h1>Pepsi Mesa</h1>
     <hr>
     <ul>
         <li><a href="pepsiman.html">Pepsiman</a></li>
